# AutoNotion

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  PROJECT_CONTEXT.md  README.md  pyproject.toml
config/: notion.toml  session-close.example.json
docs/: README.md  architecture.md  current-state.md  excel-export.md  git-publishing.md  graphify-strategy.md  notion-strategy.md  obsidian-strategy.md  risks.md  security.md  session-close.md  weekly-report.md
docs/decisions/: ADR-001-arquitectura-inicial.md  ADR-002-trazabilidad-por-sesiones.md  ADR-003-contexto-ia-por-proyecto.md  ADR-004-confirmacion-explicita-de-cierre.md  ADR-005-reglas-globales-y-por-proyecto.md  ADR-006-memoria-de-sesiones-para-continuidad.md  ADR-007-conector-central-de-cierre-notion.md  ADR-008-adopcion-ponytail.md  ADR-009-contexto-progresivo-y-presupuestos.md
docs/obsidian-notes/Decisiones/: 2026-06-28 Arquitectura inicial.md  2026-06-28 Confirmación explícita de cierre.md  2026-06-28 Contexto de IA por proyecto.md  2026-06-28 Memoria de sesiones para continuidad.md  2026-06-28 Reglas globales y por proyecto.md  2026-06-28 Trazabilidad por sesiones.md  2026-06-29 Adopción de Ponytail.md  (+2 more)
scripts/: exportExcel.py  notion.py  reporteSemanal.py
src/trazabilidad/: __init__.py  cli.py  closing.py  config.py  excel_export.py  notion_client.py  project_close.py  session.py  weekly_report.py
tests/: __init__.py  test_closing.py  test_config.py  test_context_budget.py  test_excel_export.py  test_notion_client.py  test_project_close.py  test_session.py  test_weekly_report.py
(+30 files in other folders)
