[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sistema-trazabilidad"
version = "0.1.0"
description = "Base para integrar Notion, Obsidian y Graphify."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
trazabilidad-notion = "trazabilidad.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
